# python-wikipedia-app

./: .gitignore  README.md  config.emulation.env.example  config.py  config.real.env.example  pyproject.toml
python_wikipedia_mobile/model/: app.py
python_wikipedia_mobile/utils/: __init__.py  file.py
python_wikipedia_mobile/utils/allure/: attach.py
tests/: conftest.py  test_wikipedia.py
